Navigation gets fixed on tablet

--- a/app/styles/_navigation.scss
+++ b/app/styles/_navigation.scss
@@ -1,15 +1,19 @@
 .navigation {
-  position: fixed;
+  position: absolute;
   z-index: 10;
   top: 0;
   left: 0;
   right: 0;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
   background: rgba(#000, 0.75);
   font-size: 16px;
   color: #fff;
   transition: 0.2s;
+
+  @media (min-width: 60em) {
+    position: fixed;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
 
   &.transparent {
     background: transparent;
@@ -17,8 +21,10 @@
   }
 
   .touchevents & {
-    background: rgba(#000, 0.75);
-    transform: none;
+    @media (min-width: 60em) {
+      background: rgba(#000, 0.75);
+      transform: none;
+    }
   }
 
   .container {
